--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0; 
-    background-color: #f8f8f8;
+    background-color: #dad8d8;
     width: 100%; 
 }
 
@@ -39,28 +39,6 @@ nav a {
 }
 
 
-
-/* BOX STYLING */
-.contact-box {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    flex: 1; 
-    min-width: 300px; 
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-
-/*  Google Maps  */
-.map-container {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%; 
-    min-width: 450px; 
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-}
 
 
 /* FORM STYLING */
