--- a/beyond-the-battlefield/style.css
+++ b/beyond-the-battlefield/style.css
@@ -78,7 +78,9 @@ nav a.active {
 .video iframe {
     width: 100%;
     height: 315px;
+    border: none; /* This line removes the obsolete frameborder */
 }
+
 
 /* ===== Images Section ===== */
 .images {
