--- a/milestone6/styles.css
+++ b/milestone6/styles.css
@@ -149,7 +149,7 @@ blockquote {
 }
 
 .upload-box:hover {
-    background-color: #eef1f7;
+    background-color: #ffffff;
 }
 
 input[type="file"] {
@@ -165,7 +165,7 @@ input[type="file"] {
 input, textarea {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #ffffff;
     border-radius: 5px;
 }
 
@@ -217,7 +217,7 @@ input, textarea {
 .meme-caption {
     font-size: 1.1em;
     margin-top: 10px;
-    color: #444;
+    color: #ffffff;
 }
 
 /* ===== Footer ===== */
@@ -227,4 +227,43 @@ footer {
     padding: 10px 0;
     margin-top: 30px;
     font-size: 14px;
+}
+@media screen and (max-width: 768px) {
+
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav a {
+        display: block;
+        margin: 10px 0;
+        padding: 10px;
+        font-size: 16px;
+        width: 90%;
+    }
+
+    .hero, .video, .images, .chat-purpose, .upload-section {
+        width: 95%;
+    }
+
+    .images {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-left: 10px;
+    }
+    
+    .images img {
+        width: 90%;
+        max-width: 300px;
+        height: auto;
+        margin: 10px 0;
+    }
+    
+
+    .meme-gallery {
+        grid-template-columns: 1fr;
+    }
 }
