--- a/milestone6/styles.css
+++ b/milestone6/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     background-color: #f4f4f4;
-    color: #333;
+    color: #faf9f9;
     margin: 0;
     padding: 0;
 }
@@ -176,7 +176,7 @@ input, textarea {
     padding: 12px;
     border: none;
     border-radius: 5px;
-    cursor: not-allowed;
+    cursor: pointer;
     font-size: 18px;
     font-weight: bold;
     width: 100%;
@@ -244,9 +244,8 @@ footer {
         width: 90%;
     }
 
-    .hero, .video, .images, .chat-purpose, .upload-section {
-        width: 95%;
-    }
+    .hero, .video, .images {
+        width: 95%; }
 
     .images {
         display: flex;
@@ -256,7 +255,7 @@ footer {
     }
     
     .images img {
-        width: 90%;
+        width: 70%;
         max-width: 300px;
         height: auto;
         margin: 10px 0;
