--- a/milestone6/styles.css
+++ b/milestone6/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     background-color: #f4f4f4;
-    color: #faf9f9;
+    color: #3b3a3a;
     margin: 0;
     padding: 0;
 }
