--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -181,7 +181,7 @@ nav a:hover {
 }
 
 .contact-form input[type="submit"] {
-    background-color: #5a85c7;
+    background-color: #c75a5a;
     color: white;
     border: none;
     cursor: pointer;
