--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0; 
     background-color: #4B5320; /* Military Green */
-    color: #F5DEB3; /* Desert Tan text */
+    color: #FFFFF0; /* Desert Tan text */
     width: 100%; 
     font-weight: bold;
     font-size: 1.1em; 
