--- a/lab13/styles.css
+++ b/lab13/styles.css
@@ -318,6 +318,23 @@ footer {
             align-items: center;
         }
     }
+    @media screen and (max-width: 768px) {
+        .skills-container {
+            flex-direction: column;
+            align-items: center;
+        }
+    
+        .main-skills {
+            flex-direction: column;
+            align-items: center;
+        }
+    
+        .other-skills {
+            max-width: 90%;
+            width: 100%;
+            margin-top: 20px;
+        }
+    }
     
 }
 
