--- a/beyond-the-battlefield/style.css
+++ b/beyond-the-battlefield/style.css
@@ -48,6 +48,28 @@ nav a:hover {
     color: #00274D;             /* Dark navy */
     border-radius: 5px;
 }
+.mission {
+    background-color: #f4f4f4;
+    border-left: 5px solid #FFD700;
+    margin: 0px auto;
+    padding: 1px;
+    width: 90%;
+    max-width: 700px;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+    font-weight: bold;
+}
+
+.mission h2 {
+    color: #000000;
+    font-size: 1.8em;
+    margin-bottom: 10px;
+}
+
+.mission p {
+    font-size: 1.1em;
+    line-height: 1.6;
+    color: #000000;
+}
 
 
 /* ===== Hero Section ===== */
@@ -57,8 +79,8 @@ nav a:hover {
     border-radius: 10px;
     margin: 20px auto;
     width: 90%;
-    max-width: 800px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    max-width: 670px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .hero h2 {
@@ -76,6 +98,7 @@ nav a:hover {
     margin: 30px auto;
     width: 90%;
     max-width: 700px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .video iframe {
@@ -98,7 +121,7 @@ nav a:hover {
     height: auto;
     margin: 20px;
     border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     display: block;
     margin-left: auto;
     margin-right: auto;
