--- a/lab14/styles.css
+++ b/lab14/styles.css
@@ -22,9 +22,12 @@ body.contact-page {
     background-color: #81613c;
 }
 
-h1, h2 {
-    color: #FFD700; /* Gold */
+
+h1, h2, h3 {
+    font-family: 'Bad Script', cursive;
+    color: #FFD700; 
 }
+
 .header-container {
     max-width: 1200px;
     margin: 0 auto;
