--- a/milestone7/style.css
+++ b/milestone7/style.css
@@ -66,7 +66,7 @@ nav a.active {
 
 /* ===== Hero Section ===== */
 .hero {
-    background-color: #FFD700; /* Gold background */
+    background-color: #ffd900; 
     padding: 20px;
     border-radius: 10px;
     margin: 20px auto;
@@ -81,7 +81,7 @@ nav a.active {
 
 .hotline {
     font-size: 1.5em;
-    color: red;
+    color: rgb(255, 0, 0);
     font-weight: bold;
 }
 
